[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/background.png" type="Texture" id=1]
[ext_resource path="res://characters/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/enemies/NormalEnemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://characters/enemies/DiverEnemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://World.gd" type="Script" id=5]
[ext_resource path="res://characters/enemies/ShootingEnemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://characters/enemies/EnemySpawner.gd" type="Script" id=7]

[node name="World" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 540, 960 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 271, 809 )

[node name="EnemySpawner" type="Node2D" parent="."]
script = ExtResource( 7 )
enemies = [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ) ]

[node name="SpawnLocations" type="Node2D" parent="EnemySpawner"]
position = Vector2( -1, -59 )

[node name="SpawnLocation_01" type="Position2D" parent="EnemySpawner/SpawnLocations"]
position = Vector2( 70, 0 )

[node name="SpawnLocation_02" type="Position2D" parent="EnemySpawner/SpawnLocations"]
position = Vector2( 170, 0 )

[node name="SpawnLocation_03" type="Position2D" parent="EnemySpawner/SpawnLocations"]
position = Vector2( 270, 0 )

[node name="SpawnLocation_04" type="Position2D" parent="EnemySpawner/SpawnLocations"]
position = Vector2( 370, 0 )

[node name="SpawnLocation_05" type="Position2D" parent="EnemySpawner/SpawnLocations"]
position = Vector2( 470, 0 )

[node name="SpawnTimer" type="Timer" parent="EnemySpawner"]
wait_time = 2.0
autostart = true

[connection signal="area_entered" from="Player" to="Player" method="_on_Player_area_entered"]
[connection signal="spawn_laser" from="Player" to="." method="spawn_laser"]
[connection signal="spawn_enemy" from="EnemySpawner" to="." method="_on_EnemySpawner_spawn_enemy"]
[connection signal="timeout" from="EnemySpawner/SpawnTimer" to="EnemySpawner" method="_on_SpawnTimer_timeout"]
